@@ -27,6 +27,7 @@
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
     ADDED: virtual VFS (try virt:/somthing/)
 
+    FIXED: [ 976598 ] krusader occasionally crashes at closing the viewer
     FIXED: [ 1033319 ] Relative paths dont get auto-completed
     FIXED: [ 971831 ] space calculation failure if the file is bigger than 4 GByte
     FIXED: [ 1089450 ] synchronizer copies the date information for local files
